--- a/hackathon/templates/home.html
+++ b/hackathon/templates/home.html
@@ -1,1 +1,44 @@
-<h1> My name is {{name}}</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>ResumeAnalyser</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css">
+</head>
+<body class="mat-typography">
+    <div class="container py-4">
+        <h1>Analyze you Resume</h1>
+        <div class="row">
+          <form method="post" action="analyse" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="fileUpload">Upload your Resume</label>
+                <input type="file" class="form-control" name="resume" placeholder="No file uploaded">
+              </div>
+            <div class="form-group">
+              <label for="jb1">Job Description 1</label>
+              <input type="text" class="form-control" name="jd1" placeholder="Enter Job Description">
+            </div>
+            <div class="form-group">
+              <label for="jb2">Job Description 2</label>
+              <input type="text" class="form-control" name="jd2" placeholder="Enter Job Description">
+            </div>
+            <div class="form-group">
+              <label for="jb3">Job Description 3</label>
+              <input type="text" class="form-control" name="jd3" placeholder="Enter Job Description">
+            </div>
+            <div class="form-group">
+              <label for="jb4">Job Description 4</label>
+              <input type="text" class="form-control" name="jd4" placeholder="Enter Job Description">
+            </div>
+            <div class="form-group">
+              <label for="jb5">Job Description 5</label>
+              <input type="text" class="form-control" name="jd5" placeholder="Enter Job Description">
+            </div>
+            <button type="submit" class="btn btn-primary">Analyse</button>
+          </form>
+        </div>
+      </div>
+</body>
+</html>
