--- a/hackathon/templates/result.html
+++ b/hackathon/templates/result.html
@@ -4,9 +4,157 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Analysis Report</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1>This is the result</h1>
+    <h1 style="text-align:center">Analysis Report</h1>
+    <div class="layout">
+        <div class="container py-4">
+            <div class="row" id="row1">
+                <div class="col-sm-6">
+                    <div class="row" id="jb1">
+                        <h2>Job Description 1</h2>
+                        <div class="col-sm-6">
+                            <h3>Relavent</h3>
+                            <ul>
+                                <li>{{ i }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3>Irrelavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{q  }}</li>
+                                <li>{{q  }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row" id="jb2">
+                        <h2>Job Description 2</h2>
+                        <div class="col-sm-6">
+                            <h3>Relavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3>Irrelavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="row2">
+                <div class="col-sm-6">
+                    <div class="row" id="jb3">
+                        <h2>Job Description 3</h2>
+                        <div class="col-sm-6">
+                            <h3>Relavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3>Irrelavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row" id="jb4">
+                        <h2>Job Description 4</h2>
+                        <div class="col-sm-6">
+                            <h3>Relavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3>Irrelavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="row3">
+                <div class="col-sm-6">
+                    <div class="row" id="jb5">
+                        <h2>Job Description 5</h2>
+                        <div class="col-sm-6">
+                            <h3>Relavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3>Irrelavent</h3>
+                            <ul>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                                <li>{{ q }}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <h2>Project Ideas</h2>
+                    <ul>
+                        <li>{{ q}}</li>
+                        <li>{{q }}</li>
+                        <li>{{ q}}</li>
+                        <li>{{ q}}</li>
+                        <li>{{q }}</li>
+                    </ul>
+                </div>
+            </div>
+          </div>
+    </div>
+    <script></script>
 </body>
 </html>
