--- a/hackathon/templates/input.html
+++ b/hackathon/templates/input.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-    h2{text-align: center;}
+    * { 
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 50px 20px;
+        max-width: 800px;
+    }
+    .layout {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 </style>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathon</title>
+    <title>Resume Analyzer</title>
 </head>
 <body>
     <h2>Match your resume</h2>
