--- a/hackathon/templates/home.html
+++ b/hackathon/templates/home.html
@@ -1,6 +1,21 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <style>
+    * { 
+        box-sizing: border-box;
+    }
+
+    body {
+        margin: 50px 20px;
+        max-width: 800px;
+    }
+    .layout {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
   <meta charset="utf-8">
   <title>ResumeAnalyser</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
