--- a/hackathon/templates/result.html
+++ b/hackathon/templates/result.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        * { 
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 50px 20px;
+            max-width: 800px;
+        }
+        .layout {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analysis Report</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" crossorigin="anonymous">
 </head>
 <body>
     <h1 style="text-align:center">Analysis Report</h1>
@@ -17,23 +32,19 @@
                     <div class="row" id="jb1">
                         <h2>Job Description 1</h2>
                         <div class="col-sm-6">
-                            <h3>Relavent</h3>
+                            <h3>Relevant ({{ sim_scores.0|floatformat }})</h3>
                             <ul>
-                                <li>{{ i }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in rel.0|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelavent</h3>
+                            <h3>Irrelevant</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{q  }}</li>
-                                <li>{{q  }}</li>
+                            {% for item in irrel.0|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -42,23 +53,19 @@
                     <div class="row" id="jb2">
                         <h2>Job Description 2</h2>
                         <div class="col-sm-6">
-                            <h3>Relavent</h3>
+                            <h3>Relevant ({{ sim_scores.1|floatformat }})</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in rel.1|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelavent</h3>
+                            <h3>Irrelevant</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in irrel.1|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -69,23 +76,19 @@
                     <div class="row" id="jb3">
                         <h2>Job Description 3</h2>
                         <div class="col-sm-6">
-                            <h3>Relavent</h3>
+                            <h3>Relevant ({{ sim_scores.2|floatformat }})</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in rel.2|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelavent</h3>
+                            <h3>Irrelevant</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in irrel.2|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -94,23 +97,19 @@
                     <div class="row" id="jb4">
                         <h2>Job Description 4</h2>
                         <div class="col-sm-6">
-                            <h3>Relavent</h3>
+                            <h3>Relevant ({{ sim_scores.3|floatformat }})</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in rel.3|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelavent</h3>
+                            <h3>Irrelevant</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in irrel.3|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -121,23 +120,19 @@
                     <div class="row" id="jb5">
                         <h2>Job Description 5</h2>
                         <div class="col-sm-6">
-                            <h3>Relavent</h3>
+                            <h3>Relevant ({{ sim_scores.4|floatformat }})</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in rel.4|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelavent</h3>
+                            <h3>Irrelevant</h3>
                             <ul>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
-                                <li>{{ q }}</li>
+                            {% for item in irrel.4|slice:"0:5" %}
+                                <li>{{ item.0 }}</li>
+                            {% endfor %}
                             </ul>
                         </div>
                     </div>
@@ -145,11 +140,9 @@
                 <div class="col-sm-6">
                     <h2>Project Ideas</h2>
                     <ul>
-                        <li>{{ q}}</li>
-                        <li>{{q }}</li>
-                        <li>{{ q}}</li>
-                        <li>{{ q}}</li>
-                        <li>{{q }}</li>
+                    {% for item in project_suggestions %}
+                        <li>{{ item }}</li>
+                    {% endfor %}
                     </ul>
                 </div>
             </div>
