--- a/hackathon/templates/result.html
+++ b/hackathon/templates/result.html
@@ -8,12 +8,12 @@
 
         body {
             margin: 50px 20px;
-            max-width: 800px;
+            max-width: 100%;
         }
         .layout {
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
         }
     </style>
     <meta charset="UTF-8">
@@ -29,8 +29,8 @@
         <div class="container py-4">
             <div class="row" id="row1">
                 <div class="col-sm-6">
+                    <h2>Job Description 1</h2>
                     <div class="row" id="jb1">
-                        <h2>Job Description 1</h2>
                         <div class="col-sm-6">
                             <h3>Relevant ({{ sim_scores.0|floatformat }})</h3>
                             <ul>
@@ -50,8 +50,8 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
+                    <h2>Job Description 2</h2>
                     <div class="row" id="jb2">
-                        <h2>Job Description 2</h2>
                         <div class="col-sm-6">
                             <h3>Relevant ({{ sim_scores.1|floatformat }})</h3>
                             <ul>
@@ -73,8 +73,8 @@
             </div>
             <div class="row" id="row2">
                 <div class="col-sm-6">
+                    <h2>Job Description 3</h2>
                     <div class="row" id="jb3">
-                        <h2>Job Description 3</h2>
                         <div class="col-sm-6">
                             <h3>Relevant ({{ sim_scores.2|floatformat }})</h3>
                             <ul>
@@ -94,8 +94,8 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
+                    <h2>Job Description 4</h2>
                     <div class="row" id="jb4">
-                        <h2>Job Description 4</h2>
                         <div class="col-sm-6">
                             <h3>Relevant ({{ sim_scores.3|floatformat }})</h3>
                             <ul>
@@ -117,8 +117,8 @@
             </div>
             <div class="row" id="row3">
                 <div class="col-sm-6">
+                    <h2>Job Description 5</h2>
                     <div class="row" id="jb5">
-                        <h2>Job Description 5</h2>
                         <div class="col-sm-6">
                             <h3>Relevant ({{ sim_scores.4|floatformat }})</h3>
                             <ul>
