Latest working version

--- a/hackathon/templates/result.html
+++ b/hackathon/templates/result.html
@@ -32,7 +32,7 @@
                     <h2>Job Description 1</h2>
                     <div class="row" id="jb1">
                         <div class="col-sm-6">
-                            <h3>Relevant ({{ sim_scores.0|floatformat }})</h3>
+                            <h3>Matching :) ({{ sim_scores.0|floatformat }})</h3>
                             <ul>
                             {% for item in rel.0|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -40,7 +40,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelevant</h3>
+                            <h3>Missing :(</h3>
                             <ul>
                             {% for item in irrel.0|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -53,7 +53,7 @@
                     <h2>Job Description 2</h2>
                     <div class="row" id="jb2">
                         <div class="col-sm-6">
-                            <h3>Relevant ({{ sim_scores.1|floatformat }})</h3>
+                            <h3>Matching :) ({{ sim_scores.1|floatformat }})</h3>
                             <ul>
                             {% for item in rel.1|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -61,7 +61,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelevant</h3>
+                            <h3>Missing :(</h3>
                             <ul>
                             {% for item in irrel.1|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -76,7 +76,7 @@
                     <h2>Job Description 3</h2>
                     <div class="row" id="jb3">
                         <div class="col-sm-6">
-                            <h3>Relevant ({{ sim_scores.2|floatformat }})</h3>
+                            <h3>Matching :) ({{ sim_scores.2|floatformat }})</h3>
                             <ul>
                             {% for item in rel.2|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -84,7 +84,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelevant</h3>
+                            <h3>Missing :(</h3>
                             <ul>
                             {% for item in irrel.2|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -97,7 +97,7 @@
                     <h2>Job Description 4</h2>
                     <div class="row" id="jb4">
                         <div class="col-sm-6">
-                            <h3>Relevant ({{ sim_scores.3|floatformat }})</h3>
+                            <h3>Matching :) ({{ sim_scores.3|floatformat }})</h3>
                             <ul>
                             {% for item in rel.3|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -105,7 +105,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelevant</h3>
+                            <h3>Missing :(</h3>
                             <ul>
                             {% for item in irrel.3|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -120,7 +120,7 @@
                     <h2>Job Description 5</h2>
                     <div class="row" id="jb5">
                         <div class="col-sm-6">
-                            <h3>Relevant ({{ sim_scores.4|floatformat }})</h3>
+                            <h3>Matching :) ({{ sim_scores.4|floatformat }})</h3>
                             <ul>
                             {% for item in rel.4|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
@@ -128,7 +128,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6">
-                            <h3>Irrelevant</h3>
+                            <h3>Missing :(</h3>
                             <ul>
                             {% for item in irrel.4|slice:"0:5" %}
                                 <li>{{ item.0 }}</li>
