Rank the project ideas

--- a/hackathon/templates/result.html
+++ b/hackathon/templates/result.html
@@ -141,7 +141,7 @@
                     <h2>Project Ideas</h2>
                     <ul>
                     {% for item in project_suggestions %}
-                        <li>{{ item }}</li>
+                        <li>{{ item.0 }}</li>
                     {% endfor %}
                     </ul>
                 </div>
